src/test/deca/context/invalid/0.1-test-identifier-expr.deca
// Description:
//    Condition de la règle 0.1 non respectée, en essayant d'affecter une valeur a cquelque chose qui n'existe pas
//
// Resultats:
//    
//

{
    x = 1;
}